tests/baselines/reference/interfaceDeclaration6.errors.txt
==== tests/cases/compiler/interfaceDeclaration6.ts (1 errors) ====
    interface i1 { foo: number; };
    interface i2 extends i1 { foo: number; };
    interface i3 extends i1 { foo: string; };
              ~~
!!! interfaceDeclaration6.ts(3,11): error TS2143: Interface 'i3' cannot extend interface 'i1':
!!! 	Types of property 'foo' of types 'i3' and 'i1' are incompatible.
    interface i4 {
     bar():any;
     bar():any;
    }